--- a/ProyectoDesarrollo/src/Vista/Cotizaciones.fxml
+++ b/ProyectoDesarrollo/src/Vista/Cotizaciones.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -13,13 +19,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorCotizaciones">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorCotizaciones">
    <children>
       <TabPane prefHeight="550.0" prefWidth="840.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-            <Tab text=" Cotizaciones">
+            <Tab style="-fx-background-color: C1C3C4;" text=" Cotizaciones">
                <content>
-                  <AnchorPane prefHeight="505.0" prefWidth="703.0">
+                  <AnchorPane prefHeight="505.0" prefWidth="703.0" style="-fx-background-color: C4DCF2;">
                      <children>
                         <Label layoutX="353.0" layoutY="32.0" text="Cotizacion">
                            <font>
@@ -27,20 +33,20 @@
                            </font>
                         </Label>
                         <ComboBox fx:id="combo_unidades_cotizacion" layoutX="316.0" layoutY="217.0" prefWidth="150.0" promptText="Unidades" />
-                        <Label layoutX="39.0" layoutY="97.0" text="Informacion del automovil" />
-                        <Label layoutX="55.0" layoutY="130.0" text="automovil (ID)">
+                        <Label layoutX="39.0" layoutY="97.0" text="Información del Automóvil" />
+                        <Label layoutX="55.0" layoutY="130.0" text="Automóvil (ID)">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
                         <TextField fx:id="txt_IDautomovil_cotizacion" layoutX="190.0" layoutY="128.0" prefHeight="25.0" prefWidth="84.0" />
-                        <Label layoutX="41.0" layoutY="263.0" text="Informacion del Cliente" />
+                        <Label layoutX="41.0" layoutY="263.0" text="Información del Cliente" />
                         <TextField fx:id="txt_cedula_cotizacion" layoutX="143.0" layoutY="291.0" />
                         <TextField fx:id="txt_nombre_cotizacion" layoutX="143.0" layoutY="331.0" />
                         <TextField fx:id="txt_direccion_cotizacion" layoutX="144.0" layoutY="415.0" prefHeight="25.0" prefWidth="147.0" />
                         <TextField fx:id="txt_telefono_cotizacion" layoutX="144.0" layoutY="375.0" prefHeight="25.0" prefWidth="148.0" />
                         <TextField fx:id="txt_correo_cotizacion" layoutX="405.0" layoutY="331.0" prefHeight="25.0" prefWidth="162.0" />
-                        <Label layoutX="55.0" layoutY="294.0" text="Cedula:">
+                        <Label layoutX="55.0" layoutY="294.0" text="Cédula:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
@@ -50,12 +56,12 @@
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="55.0" layoutY="418.0" text="Direccion:">
+                        <Label layoutX="55.0" layoutY="418.0" text="Dirección:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="55.0" layoutY="378.0" text="Telefono:">
+                        <Label layoutX="55.0" layoutY="378.0" text="Teléfono:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
@@ -65,19 +71,19 @@
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="39.0" layoutY="452.0" text="Informacion del vendedor" />
+                        <Label layoutX="39.0" layoutY="452.0" text="Información del vendedor" />
                         <Separator layoutX="184.0" layoutY="455.0" prefHeight="11.0" prefWidth="390.0" />
                         <Button fx:id="button_buscar_cotizacion" alignment="BASELINE_LEFT" layoutX="315.0" layoutY="127.0" mnemonicParsing="false" onAction="#buscar_automovil" opacity="0.6" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #4B4B4B;" text="Buscar" textFill="WHITE">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <Label layoutX="55.0" layoutY="496.0" text="Vendedor (ID)">
+                        <Label layoutX="57.0" layoutY="495.0" text="Vendedor (ID)">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txt_IDvendedor_cotizacion" layoutX="184.0" layoutY="494.0" prefHeight="25.0" prefWidth="77.0" />
+                        <TextField fx:id="txt_IDvendedor_cotizacion" layoutX="186.0" layoutY="493.0" prefHeight="25.0" prefWidth="77.0" />
                         <Label layoutX="55.0" layoutY="179.0" text="Marca:">
                            <font>
                               <Font name="Verdana" size="16.0" />
@@ -88,7 +94,7 @@
                               <Font name="Verdana" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="313.0" layoutY="179.0" text="Linea:">
+                        <Label layoutX="313.0" layoutY="179.0" text="Línea:">
                            <font>
                               <Font name="Verdana" size="16.0" />
                            </font>
@@ -123,7 +129,7 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="619.0" layoutY="191.0" text="Vehiculo:">
+                        <Label layoutX="619.0" layoutY="191.0" text="Vehículo:">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -138,12 +144,12 @@
                               <Font size="13.0" />
                            </font>
                         </Label>
-                        <Button fx:id="button_buscar_Cliente" alignment="BASELINE_LEFT" layoutX="315.0" layoutY="286.0" mnemonicParsing="false" onAction="#buscar_cliente" opacity="0.6" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #4B4B4B;" text="Buscar" textFill="WHITE">
+                        <Button fx:id="button_buscar_Cliente" alignment="BASELINE_LEFT" layoutX="315.0" layoutY="292.0" mnemonicParsing="false" onAction="#buscar_cliente" opacity="0.6" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #4B4B4B;" text="Buscar" textFill="WHITE">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <ComboBox fx:id="combo_Genero_Cotizacion" layoutX="313.0" layoutY="375.0" prefHeight="25.0" prefWidth="146.0" promptText="Genero" />
+                        <ComboBox fx:id="combo_Genero_Cotizacion" layoutX="313.0" layoutY="375.0" prefHeight="25.0" prefWidth="146.0" promptText="Género" />
                         <Label layoutX="313.0" layoutY="418.0" text="Comuna:">
                            <font>
                               <Font name="Verdana" size="16.0" />
@@ -178,7 +184,7 @@
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Label>
-                        <Button fx:id="bBuscarCliente" layoutX="558.0" layoutY="120.0" mnemonicParsing="false" onAction="#buscarCliente" prefHeight="28.0" prefWidth="139.0" style="-fx-background-color: #76A2CB;" text="Buscar Cliente" textFill="WHITE">
+                        <Button fx:id="bBuscarCliente" layoutX="558.0" layoutY="120.0" mnemonicParsing="false" onAction="#buscarClienteM" prefHeight="28.0" prefWidth="139.0" style="-fx-background-color: #76A2CB;" text="Buscar Cliente" textFill="WHITE">
                            <font>
                               <Font name="Verdana Bold" size="14.0" />
                            </font>
@@ -186,31 +192,31 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <TextField fx:id="tfCorreoCliente" disable="true" editable="false" layoutX="561.0" layoutY="279.0" />
-                        <TextField fx:id="tfDireccionCliente" disable="true" editable="false" layoutX="134.0" layoutY="279.0" />
-                        <TextField fx:id="tfTelefonoCliente" disable="true" editable="false" layoutX="562.0" layoutY="190.0" />
-                        <TextField fx:id="tfNombreCliente" disable="true" editable="false" layoutX="134.0" layoutY="190.0" />
-                        <Label layoutX="134.0" layoutY="172.0" text="Nombre:">
+                        <TextField fx:id="tfCorreoCliente" disable="true" editable="false" layoutX="561.0" layoutY="291.0" />
+                        <TextField fx:id="tfDireccionCliente" disable="true" editable="false" layoutX="134.0" layoutY="291.0" />
+                        <TextField fx:id="tfTelefonoCliente" disable="true" editable="false" layoutX="562.0" layoutY="202.0" />
+                        <TextField fx:id="tfNombreCliente" disable="true" editable="false" layoutX="134.0" layoutY="202.0" />
+                        <Label layoutX="134.0" layoutY="184.0" text="Nombre:">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="134.0" layoutY="261.0" text="Dirección:">
+                        <Label layoutX="134.0" layoutY="273.0" text="Dirección:">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="562.0" layoutY="172.0" text="Teléfono:">
+                        <Label layoutX="562.0" layoutY="184.0" text="Teléfono:">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="561.0" layoutY="261.0" prefHeight="17.0" prefWidth="103.0" text="Correo:">
+                        <Label layoutX="561.0" layoutY="273.0" prefHeight="17.0" prefWidth="103.0" text="Correo:">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Label>
-                        <Button fx:id="bLimpiarCampos" layoutX="269.0" layoutY="435.0" mnemonicParsing="false" onAction="#limpiarCampos" prefHeight="33.0" prefWidth="147.0" style="-fx-background-color: #76A2CB;" text="Limpiar Campos" textFill="WHITE">
+                        <Button fx:id="bLimpiarCampos" layoutX="269.0" layoutY="447.0" mnemonicParsing="false" onAction="#limpiarCampos" prefHeight="33.0" prefWidth="147.0" style="-fx-background-color: #76A2CB;" text="Limpiar Campos" textFill="WHITE">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
@@ -218,7 +224,7 @@
                               <Font name="Verdana Bold" size="14.0" />
                            </font>
                         </Button>
-                        <Button fx:id="bModificarCliente" layoutX="435.0" layoutY="435.0" mnemonicParsing="false" onAction="#modificarCliente" prefHeight="33.0" prefWidth="161.0" style="-fx-background-color: #76A2CB;" text="Modificar Cliente" textFill="WHITE">
+                        <Button fx:id="bModificarCliente" layoutX="435.0" layoutY="447.0" mnemonicParsing="false" onAction="#modificarCliente" prefHeight="33.0" prefWidth="161.0" style="-fx-background-color: #76A2CB;" text="Modificar Cliente" textFill="WHITE">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
@@ -232,12 +238,18 @@
                            </image>
                         </ImageView>
                         <TextField fx:id="tfCedula" layoutX="273.0" layoutY="121.0" prefHeight="25.0" prefWidth="255.0" />
-                        <Label layoutX="348.0" layoutY="338.0" prefHeight="17.0" prefWidth="103.0" text="Género:">
+                        <Label layoutX="134.0" layoutY="356.0" prefHeight="17.0" prefWidth="103.0" text="Género:">
                            <font>
                               <Font name="Verdana" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="tfGeneroCliente" disable="true" editable="false" layoutX="348.0" layoutY="356.0" />
+                        <TextField fx:id="tfGeneroCliente" disable="true" editable="false" layoutX="134.0" layoutY="374.0" />
+                        <TextField fx:id="tfComunaCliente" disable="true" editable="false" layoutX="562.0" layoutY="377.0" />
+                        <Label layoutX="562.0" layoutY="359.0" prefHeight="17.0" prefWidth="103.0" text="Comuna:">
+                           <font>
+                              <Font name="Verdana" size="14.0" />
+                           </font>
+                        </Label>
                      </children>
                   </AnchorPane>
               </content>
